made some changes to the definition of a partial function in §8.1, and fixed some faulty anaphora in §8.6.

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -76,7 +76,7 @@ This book has been designed for use in conjunction with the University of Adelai
 	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. The index of defined terms is Appendix \ref{app.index}.
 	\item The book is the product of a number of authors. `I' doesn't always mean me, but `you' mostly means you, the reader, and `we' mostly means you and me.
 \end{itemize}
-I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
+I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}, or you can propose changes at the book's repository: \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}.
 
  \thispagestyle{empty}
 \begin{figure}
