--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -22,9 +22,13 @@ Ivanka Trump & Donald\\
 Daisy Turnbull & Malcolm\\
 … & … \\ \bottomrule
 \end{tabular}
-\end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of …' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We implicitly that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold: some outputs are linked to more than one input, in fact, every father with more than one child.
+\end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of …' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We assume that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold. Some outputs are linked to more than one input: for example, Barack Obama is the common output of this function when it is given Malia Obama and Sasha Obama as inputs.
 
-Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate nonparents with anything. There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
+A function is a map from some inputs to some outputs. To completely specify a function it is also important to identify what those inputs and outputs are. The English expression `the biological father of' could be understood as a function from human beings to human beings; or from living creatures to living creatures. One could even consider it as a function that takes any input whatever. In the latter case, the function will be \emph{undefined} for many possible inputs: the description, `the biological father of the Torrens footbridge' fails to refer to anything. If a function does not associate an output with every possible input, it is a \define{partial function}; if it is well-defined for every input, it is a \define{total function}. These notions are relative to the inputs in question: `the biological father of …' is a total function when the possible inputs are human beings, but only a partial function when anything could be a possible input.
+
+Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.)  
+
+There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister. A function is a special kind of relation: one where each thing relates to some unique output. We treat the idea of a relation more thoroughly in §\ref{predrel}.
 
 \section{The Idea of Truth-Functionality}
 
@@ -148,7 +152,7 @@ This affects how we should understand our symbolisation keys. Consider a key lik
 		\item[F] Jon is elegant.
 		\item[Q] Jon is quick.
 	\end{ekey}
-Other textbooks will understand this as a stipulation that the \TFL\ sentence `$F$' should \emph{mean} that Jon is elegant, and that the \TFL\ sentence `$Q$' should \emph{mean} that Jon is quick. But \TFL\ just is totally unequipped to deal with \emph{meaning}. The preceding symbolisation key is doing no more nor less than stipulating that the \TFL\ sentence `$F$' should take the same truth value as the English sentence `Jon is elegant' (whatever that might be), and that the \TFL\ sentence `$Q$' should take the same truth value as the English sentence `Jon is quick' (whatever that might be). 
+Other textbooks will understand this as a stipulation that the \TFL\ sentence `$F$' should \emph{mean} that Jon is elegant, and that the \TFL\ sentence `$Q$' should \emph{mean} that Jon is quick. But \TFL\ is unequipped to deal with \emph{meaning}. The preceding symbolisation key is doing no more nor less than stipulating that the \TFL\ sentence `$F$' should take the same truth value as the English sentence `Jon is elegant' (whatever that might be), and that the \TFL\ sentence `$Q$' should take the same truth value as the English sentence `Jon is quick' (whatever that might be). 
 	\factoidbox{
 		When we treat an atomic \TFL\ sentence as \emph{symbolising} an English sentence, we are stipulating that the \TFL\ sentence is to take the same truth value as that English sentence.
 
@@ -169,11 +173,11 @@ In these cases, we had the same input truth values, but different output. We can
 
 
 \section{Indicative Versus Subjunctive Conditionals}\label{s:IndicativeSubjunctive}
-I want to bring home the point that \TFL\ \emph{only} deals with truth functions by considering the case of the conditional. When I introduced the schematic truth table for the material conditional in §\ref{s:SchematicTruthTables}, I did not say much to justify it. Let me now offer two justifications. These are not arguments for the truth function associated with `$\eif$', which is a perfectly legitimate rule for associating input truth values with outputs. What needs justification is our idea that we should use this truth function when symbolise English sentences whose main connective is `if … then …'. They attempt to show that our usage of the English conditional `if' is in line with the way `$\eif$' behaves.
+I want to bring home the point that \TFL\ \emph{only} deals with truth functions by considering the case of the conditional. When I introduced the schematic truth table for the material conditional in §\ref{s:SchematicTruthTables}, I did not say much to justify it. Let me now offer two justifications. These are not arguments about which truth function we ought to associate with `$\eif$'. The one we offered earlier is a perfectly legitimate rule for associating input truth values with outputs. What needs justification is our idea that we should use this truth function when we symbolise English sentences whose main connective is `if … then …'. These arguments attempt to show that the meaning of the English conditional `if' is in line with the way `$\eif$' behaves.
 
 \paragraph{Edgington's Argument}
 
-The first follows a line of argument due to Dorothy Edgington.\footnote{Dorothy Edgington (2020) `Indicative Conditionals', in Edward N Zalta, ec., \emph{TheStanford Encyclopedia of Philosophy}, \url{http://plato.stanford.edu/entries/conditionals/}.}  Suppose that Lara has drawn some shapes on a piece of paper, and coloured some of them in. I have not seen them, but I claim:
+The first follows a line of argument due to Dorothy Edgington.\footnote{Dorothy Edgington (2020) `Indicative Conditionals', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy}, \url{https://plato.stanford.edu/entries/conditionals/}.}  Suppose that Lara has drawn some shapes on a piece of paper, and coloured some of them in. I have not seen them, but I claim:
 	\begin{quote}
 		If any shape is grey, then that shape is also circular.
 	\end{quote}
