modified treatment of urls

--- a/forallx-adl-appendices.tex
+++ b/forallx-adl-appendices.tex
@@ -76,7 +76,7 @@ universal quantifier & $\forall x$, $(x)$\\ \bottomrule
 
 We have established some conventions governing when you can omit parentheses in \TFL\ (in §§\ref{TFLconventions} and \ref{s:MoreParentheticalConventions}). These conventions are useful in practice. It can be hard to read sentences with many nested parentheses. Moreover, it is easy to make a mistake when constructing sentences, if you accidentally omit a needed bracket. So there has been some interest in ways of doing sentential logic without parentheses. Frege's initial formulation of sentential logic in his \emph{Begriffschrift} (1879) lacked parentheses, but involves a complicated nonlinear branching structure which is difficult to typeset and has not been much used by anyone since.
 
-The now-standard approach to sentential logic without parentheses was due to the Polish logician Jan Łukasiewicz, and for that reason it has become known as \define{Polish notation}. It is a purely syntactic variant of our system \TFL: the truth-functions expressed by the connectives remain the same, but the sentences are written very differently.\footnote{In what follows I draw on Peter Simons (2017) `Łukasiewicz's Parenthesis-Free or Polish Notation', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy}, \url{https://plato.stanford.edu/archives/spr2017/entries/lukasiewicz/polish-notation.html}.}
+The now-standard approach to sentential logic without parentheses was due to the Polish logician Jan Łukasiewicz, and for that reason it has become known as \define{Polish notation}. It is a purely syntactic variant of our system \TFL: the truth-functions expressed by the connectives remain the same, but the sentences are written very differently.\footnote{In what follows I draw on Peter Simons (2017) `Łukasiewicz's Parenthesis-Free or Polish Notation', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/archives/spr2017/entries/lukasiewicz/polish-notation.html}.}
 
 The basic idea is that rather than writing a connective in a logically complex sentence between the two subsentences, it should be written before them – in a sense, it treats all binary connectives like negation. So if $\meta{A}$ and $\meta{B}$ are two sentences, the sentence we write in \TFL\ as $\meta{A} \eif \meta{B}$ would be written as $C\meta{A}\meta{B}$, where the `$C$' is the symbol used for the conditional connective. Because the language uses some of the standard upper case letters for its connectives, there is potential for confusion if we use them for atomic sentences too. So the atomic sentences of this Polish language will be `$p$', `$q$', or `$r$', with any numerical subscripts. 
 
