--- a/forallx-adl-backmatter.tex
+++ b/forallx-adl-backmatter.tex
@@ -7,7 +7,7 @@
 \subsubsection*{Acknowledgements}
 \addtocontents{toc}{\vspace{\normalbaselineskip}}
 \addcontentsline{toc}{chapter}{Acknowledgements, etc.}
-Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives, and those acknowledged below who helped them. Thanks also to Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments on successive versions of the Adelaide text.\medskip
+Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives, and those acknowledged below who helped them. Thanks also to Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Jaime von Schwarzburg, and Mike Walmer for comments on successive versions of the Adelaide text. Thanks to Matt Nestor in particular for an extensive set of corrections on the 2022 version of the text.\medskip
 
 Tim Button would like to thank P.D.\ Magnus for his extraordinary act of generosity, in making \forallx\ available to everyone. Thanks also to Alfredo Manfredini Böhm, Sam Brain, Felicity Davies, Emily Dyson, Phoebe Hill, Richard Jennings, Justin Niven,  and Igor Stojanovic for noticing errata in earlier versions. \medskip
 
@@ -15,14 +15,14 @@ P.D.\ Magnus would like to thank the people who made this project possible. Nota
 
 \subsubsection*{About the Authors}
 
-Antony Eagle is Associate Professor of Philosophy at the University of Adelaide. His research interests include metaphysics, philosophy of probability, philosophy of physics, and philosophy of logic and language. \href{https://antonyeagle.org}{\nolinkurl{antonyeagle.org}}
+Antony Eagle is Associate Professor of Philosophy at the University of Adelaide. His research interests include metaphysics, philosophy of probability, philosophy of physics, and philosophy of logic and language. \httpurl{antonyeagle.org}
 \medskip
 
 
 Tim Button is a Lecturer in Philosophy at UCL. His first book, \emph{The Limits of Realism}, was published by Oxford University Press in 2013. \href{http://www.homepages.ucl.ac.uk/~uctytbu/index.html}{\nolinkurl{www.homepages.ucl.ac.uk/~uctytbu/index.html}}
 \medskip
 
-P.D.\ Magnus is a professor at the University at Albany, State University of New York. His primary research is in the philosophy of science. \href{https://www.fecundity.com/job/}{\nolinkurl{www.fecundity.com/job/}}
+P.D.\ Magnus is a professor at the University at Albany, State University of New York. His primary research is in the philosophy of science. \httpurl{www.fecundity.com/job/}
 
 
 
