--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -518,7 +518,7 @@ Ducks lay eggs. Donald Duck is a duck. So Donald Duck lays eggs.
 
 But this cannot handle every aspect of `ducks lay eggs'. People do treat those generics as quantified, because they are often willing to conclude things about individuals given the generic claim. Given the information that ducks lay eggs, and that Wilhelmina is a duck, most people conclude that Wilhelmina lays eggs – thus apparently treating the generic as having the logical role of a universal quantifier.
 
-The proper treatment of generics in English remains a wide-open question.\footnote{See, for example, Sarah-Jane Leslie and Adam Lerner (2016) `Generic Generalizations', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy}, \url{https://plato.stanford.edu/archives/win2016/entries/generics/}.} We will not delve into it further, but you should be careful when symbolising not to be drawn into the trap of unwarily treating every generic as a universal.
+The proper treatment of generics in English remains a wide-open question.\footnote{See, for example, Sarah-Jane Leslie and Adam Lerner (2016) `Generic Generalizations', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/archives/win2016/entries/generics/}.} We will not delve into it further, but you should be careful when symbolising not to be drawn into the trap of unwarily treating every generic as a universal.
 
 
 
@@ -1379,7 +1379,7 @@ The evidence from scope ambiguity we just considered is a substantial point in f
 \paragraph{Presupposition and Negation}
 One worry focusses on Russell's treatment of empty definite descriptions. If there are no \meta{F}s, then on Russell's paraphrase, both `the \meta{F} is \meta{G}' and its narrow scope negation, `the \meta{F} is not-\meta{G}', are false. Strawson suggested that such sentences should not be regarded as false, exactly.\footnote{P F Strawson (1950) `On Referring', \emph{Mind} \textbf{59} pp.\ 320–34.} Rather, they both seem to assume that `the \meta{F}' refers, and since this assumption is incorrect, the sentences misfire in a way that should, Strawson thinks, make us regard as \emph{neither} true \emph{nor} false, but nevertheless still meaningful.
 
-A \define{semantic presupposition} of a declarative sentence is something that must be \emph{taken for granted} by anyone asserting the sentence, triggered or forced by the words involved.\footnote{See David I Beaver, Bart Geurts, and Kristie Denlinger (2021) `Presupposition', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \url{https://plato.stanford.edu/archives/spr2021/entries/presupposition/}, esp. §2 and §6.} A pretty reliable test for whether $\meta{P}$ is a semantic presupposition of a sentence $\meta{A}$ is whether $\meta{P}$ is a consequence of both $\meta{A}$ and $¬\meta{A}$. Strawson elevates this test to a \emph{definition} of semantic presupposition: presuppositions are entailments that persist when a sentence is embedded under negation.  So `John has stopped drinking' and its negation `John hasn't stopped drinking' both entail in English that John used to drink, and hence `John used to drink' is a semantic presupposition of `John has stopped drinking'. Here the presupposition is triggered by the aspectual verb `stopped'. 
+A \define{semantic presupposition} of a declarative sentence is something that must be \emph{taken for granted} by anyone asserting the sentence, triggered or forced by the words involved.\footnote{See David I Beaver, Bart Geurts, and Kristie Denlinger (2021) `Presupposition', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/archives/spr2021/entries/presupposition/}, esp. §2 and §6.} A pretty reliable test for whether $\meta{P}$ is a semantic presupposition of a sentence $\meta{A}$ is whether $\meta{P}$ is a consequence of both $\meta{A}$ and $¬\meta{A}$. Strawson elevates this test to a \emph{definition} of semantic presupposition: presuppositions are entailments that persist when a sentence is embedded under negation.  So `John has stopped drinking' and its negation `John hasn't stopped drinking' both entail in English that John used to drink, and hence `John used to drink' is a semantic presupposition of `John has stopped drinking'. Here the presupposition is triggered by the aspectual verb `stopped'. 
 
 Strawson says that \define{presupposition failure} occurs when the presupposition of a sentence is false. If John never used to drink, both `John has stopped drinking' and `John hasn't stopped drinking' misfire. Strawson, following Frege, suggests that in cases of presupposition failure, a sentence is neither true nor false. 
 
