--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -31,9 +31,9 @@ This version of \forallxadl\ is current as of \today.
 
 This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. (For one thing, it's more than twice as long.)
 
-You can find the most up to date version of \forallxadl\ at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. 
+You can find the most up to date version of \forallxadl\ at \httpurl{github.com/antonyeagle/forallx-adl}. 
 
-The current version of \forallx\ Cambridge is available at \href{https://github.com/OpenLogicProject/forallx-cam}{\nolinkurl{github.com/OpenLogicProject/forallx-cam}}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \href{http://fecundity.com/logic}{\nolinkurl{fecundity.com/logic}}. 
+The current version of \forallx\ Cambridge is available at \httpurl{github.com/OpenLogicProject/forallx-cam}}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \httpurl{fecundity.com/logic}. 
 
 This book, like its predecessors, is released under a Creative Commons license (Attribution 4.0).\medskip 
 
@@ -42,7 +42,7 @@ This book, like its predecessors, is released under a Creative Commons license (
 \end{center}
 
 \begin{quote}
-	{\small This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit \href{https://creativecommons.org/licenses/by/4.0/}{\nolinkurl{creativecommons.org/licenses/by/4.0/}} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.} 
+	{\small This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit \httpurl{creativecommons.org/licenses/by/4.0/} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.} 
 \end{quote} \medskip
 
 
@@ -76,7 +76,7 @@ This book has been designed for use in conjunction with the University of Adelai
 	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. The index of defined terms is Appendix \ref{app.index}.
 	\item The book is the product of a number of authors. `I' doesn't always mean me, but `you' mostly means you, the reader, and `we' mostly means you and me.
 \end{itemize}
-I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}, or you can propose changes at the book's repository: \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}.
+I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}, or you can propose changes at the book's repository: \httpurl{github.com/antonyeagle/forallx-adl}.
 
  \thispagestyle{empty}
 \begin{figure}
