--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -533,7 +533,7 @@ Nevertheless, even if the rule is artificial, that doesn't make it incorrect. We
     	\item Sometimes disjunction introduction looks like you are `throwing away' information that you already have – you know enough to treat `$P$' as a premise, but you end up assenting only to the weaker claim `$P \eor Q$'. But can this be the full story? Conjunction elimination seems to involve the same sort of inference from a logically stronger to a logically weaker claim, and that doesn't arouse nearly as much animosity as disjunction introduction. 
 	\item An alternative explanation: maybe the introduced disjunct seems \emph{irrelevant}, because the content of the sentence to which the rule is applied has in general nothing to do with the disjunct introduced. This is not the case with conjunction elimination, where the result of applying the rule is clearly related to the sentence it is applied to.
     		\end{itemize} 
-These considerations of relevance or information value lie beyond logic proper. They concern what we, as thinkers and hearers, can conclude about the speaker's state of mind, given that they have said something with a particular content. This is the domain of that part of linguistics known as \define{pragmatics}, the study of meaning in context. Most theories of pragmatics predict that disjunction introduction is valid but often \emph{conversationally inappropriate}. So Paul Grice, for example, says that if you are in a position to contribute the information of a claim $\meta{P}$ to a conversation, and you are a \emph{cooperative} speaker, then you will not contribute the weaker information `\meta{P} or \meta{Q}', even though you should still regard it as true.\footnote{Grice's discussion of disjunction is at pp. 44–6 in H P Grice (1989) \emph{Studies in the Way of Words}, Harvard University Press; see also §4 of Maria Aloni (2016) `Disjunction' in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \url{https://plato.stanford.edu/entries/disjunction/\#DisjConv}.}
+These considerations of relevance or information value lie beyond logic proper. They concern what we, as thinkers and hearers, can conclude about the speaker's state of mind, given that they have said something with a particular content. This is the domain of that part of linguistics known as \define{pragmatics}, the study of meaning in context. Most theories of pragmatics predict that disjunction introduction is valid but often \emph{conversationally inappropriate}. So Paul Grice, for example, says that if you are in a position to contribute the information of a claim $\meta{P}$ to a conversation, and you are a \emph{cooperative} speaker, then you will not contribute the weaker information `\meta{P} or \meta{Q}', even though you should still regard it as true.\footnote{Grice's discussion of disjunction is at pp. 44–6 in H P Grice (1989) \emph{Studies in the Way of Words}, Harvard University Press; see also §4 of Maria Aloni (2016) `Disjunction' in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/entries/disjunction/\#DisjConv}.}
 
 \section{Reiteration}\label{reit}
 
@@ -1506,7 +1506,7 @@ When you show that \enot\meta{A} leads to absurdity, you have constructed a proo
 
 Constructive logic has some interesting features that our logical system does not. For example, constructive logic is typically understood to have the \define{disjunction property}: \factoidbox{If $\meta{A} \eor \meta{B}$ can be proved from no assumptions, then either \meta{A} can be proved from no assumptions, or  $\meta{B}$  can be proved from no assumptions.} Our logic clearly lacks the disjunction property, as the proof of excluded middle demonstrates: `$P\eor\enot P$' can be proved but neither of its disjuncts is provable. 
 
-Constructive and intuitionistic logic is an alternative conception of the nature of logic to that we have advocated. It is typically understood to involve recentering logic around provability rather than truth. So rather than saying `$P\eor\enot P$' is false, constructivists deny that it is provable, and then add that mathematical language should be restricted to what is provable, rather than relying on a Platonistic notion of abstract unworldly truth. The philosophical potential of this alternative way of thinking about logic unfortunately takes us beyond the scope of the present course.\footnote{A brief account of intuitionistic logic and the central role it gives to provability can be found in §§3.1–3.2 of  Rosalie Iemhoff (2020) `Intuitionism in the Philosophy of Mathematics', in Edward N. Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \url{https://plato.stanford.edu/entries/intuitionism/\#BHKInt}.}
+Constructive and intuitionistic logic is an alternative conception of the nature of logic to that we have advocated. It is typically understood to involve recentering logic around provability rather than truth. So rather than saying `$P\eor\enot P$' is false, constructivists deny that it is provable, and then add that mathematical language should be restricted to what is provable, rather than relying on a Platonistic notion of abstract unworldly truth. The philosophical potential of this alternative way of thinking about logic unfortunately takes us beyond the scope of the present course.\footnote{A brief account of intuitionistic logic and the central role it gives to provability can be found in §§3.1–3.2 of  Rosalie Iemhoff (2020) `Intuitionism in the Philosophy of Mathematics', in Edward N. Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/entries/intuitionism/\#BHKInt}.}
 
 
 \keyideas{
@@ -1697,7 +1697,7 @@ provable & one proof & all possible proofs\\
 
 \section{Structural Rules and the Theory of Proofs}\label{s:substructural}
 
-Our proofs get their main shape from the proof rules governing the connectives. But choices we have made about how to build proofs also contribute. These principles about how to construct proofs give rise to quite abstract and general features of the notion of provability represented by `$\proves$', sometimes known as the \emph{structural rules} governing the notion of provability.\footnote{For more on structural rules, and the various logics that don't have all the structural features of our natural deduction system, see Greg Restall (2018) `Substructural Logics' in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \url{https://plato.stanford.edu/entries/logic-substructural/}.}
+Our proofs get their main shape from the proof rules governing the connectives. But choices we have made about how to build proofs also contribute. These principles about how to construct proofs give rise to quite abstract and general features of the notion of provability represented by `$\proves$', sometimes known as the \emph{structural rules} governing the notion of provability.\footnote{For more on structural rules, and the various logics that don't have all the structural features of our natural deduction system, see Greg Restall (2018) `Substructural Logics' in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/entries/logic-substructural/}.}
 
 For example: in our proof system, it does not matter in what order we make assumptions. These two proofs, distinct in their structure, nevertheless both show that $A, B \proves (A \eand B)$. 
 \begin{multicols}{2}\noindent\begin{proof}
