--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -115,6 +115,8 @@
 \newcommand{\subs}[2]{\vert_{#1\curvearrowright #2}} % Æ notation for uniform substitution of #1 for #2
 \newcommand{\domain}{\text{domain}}
 
+\newcommand{\httpurl}[1]{\href{https://#1}{\nolinkurl{#1}}} % new treatment of urls Æ
+
 %    ****************************************
 %    *          LIST  ENVIRONMENTS          *
 %    ****************************************
