--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1072,8 +1072,8 @@ That brings you to the end of the material in this course. But we've barely scra
 The soundness and completeness theorems mentioned in the last section mark the stage at which introductory logic becomes intermediate logic. More than one of the authors of this book have written distinct sequels in which the completeness of \TFL\ is established, along with other results of a `metalogical' flavour. The interested student is directed to these open access texts: \begin{itemize}
 	\item Tim Button's book is \emph{Metatheory}; it covers just \TFL, and some of the results there were actually covered in this book already, notably results around expressiveness of \TFL\ in §\ref{s:expressiveness}. \emph{Metatheory} is available at \href{http://www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}{\nolinkurl{www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}} It should be accessible for self-study by students who have successfully completed this course.
 
-\item Antony Eagle's book \emph{Elements of Deductive Logic} goes rather further than \emph{Metatheory}, including direct proofs of Compactness for \TFL, consideration of alternative derivation systems, discussion of computation and decidability, and metatheory for \FOL. It is available at \href{https://github.com/antonyeagle/edl}{\nolinkurl{github.com/antonyeagle/edl}}.
-\item The most comprehensive open access logic texts are those belonging to the Open Logic Project (\url{https://openlogicproject.org}). There are open texts on intermediat logic, set theory, modal logic, non-classical logics. For most of the topics I touch on below, the Open Logic Project texts are reliable and accessible sources. There are many texts, remixing a common core of resources which together make up the whole open logic text. 
+\item Antony Eagle's book \emph{Elements of Deductive Logic} goes rather further than \emph{Metatheory}, including direct proofs of Compactness for \TFL, consideration of alternative derivation systems, discussion of computation and decidability, and metatheory for \FOL. It is available at \httpurl{github.com/antonyeagle/edl}.
+\item The most comprehensive open access logic texts are those belonging to the Open Logic Project (\httpurl{openlogicproject.org}). There are open texts on intermediat logic, set theory, modal logic, non-classical logics. For most of the topics I touch on below, the Open Logic Project texts are reliable and accessible sources. There are many texts, remixing a common core of resources which together make up the whole open logic text. 
 \end{itemize}
 
 The metatheory of classical logic, the logic we've discussed, is well-understood. The subject of logic itself goes well beyond classical logic, in at least three ways.
@@ -1090,7 +1090,7 @@ The axioms of the theory – sentences that are assumed to be true, and so serve
 	\item $\forall x \forall y\; x + y' = (x + y)'$ (the sum of $x$ and the successor of $y$ is the successor of the sum of $x$ and $y$);
 	\item $\forall x\; x\cdot\mathbf{0} = \mathbf{0}$ (multiplying a number by zero results in zero);
 	\item $\forall x \forall y\; x\cdot y' = (x\cdot y) + x$ (the product of $x$ and the successor of $y$ is the product of $x$ and $y$ plus $x$).
-\end{itemize} These axioms serve to fix the intepretation of addition, multiplication, and successor. These axioms are all true in interpretations of \FOL\ in which the domain is the natural numbers, and the function symbols have their intended interpretation. The consequences of these axioms, those sentences that are true in every interpretation in which all the axioms are true, are the arithmetical truths that hold in Robinson arithmetic.\footnote{Another project of the same sort is the symbolisation of set theory in \FOL (see Patrick Suppes (1972) \emph{Axiomatic Set Theory}, Dover), or the symbolisations of mereology, the formal theory of part and whole (see Achille C Varzi (2016) `Mereology' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \url{https://plato.stanford.edu/entries/mereology/}).}
+\end{itemize} These axioms serve to fix the intepretation of addition, multiplication, and successor. These axioms are all true in interpretations of \FOL\ in which the domain is the natural numbers, and the function symbols have their intended interpretation. The consequences of these axioms, those sentences that are true in every interpretation in which all the axioms are true, are the arithmetical truths that hold in Robinson arithmetic.\footnote{Another project of the same sort is the symbolisation of set theory in \FOL (see Patrick Suppes (1972) \emph{Axiomatic Set Theory}, Dover), or the symbolisations of mereology, the formal theory of part and whole (see Achille C Varzi (2016) `Mereology' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/mereology/}).}
 
 Once you have a theory like this, a collection of axioms with an intended interpretation symbolised in \FOL, you can ask questions about soundness and completeness of these theories with respect to that model. Robinson arithmetic is sound with respect to its intended interpretation in the natural numbers. But it is incomplete: there are arithmetical truths it does not include. 
 
@@ -1114,7 +1114,7 @@ This kind of structured collection of valuations we've called a history is also 
 \end{itemize} 
 These constructions using valuations are extensions of \TFL. There are also quantified temporal/modal/deontic logics, where each moment of history (or each possible world) is an interpretation, not a valuation. There are some rich issues about how the domain should be permitted to vary over time, or just the extensions of predicates, as well as disputes over whether the temporal/modal operators should be permitted to occur within the scope of quantifiers. For example, should `$\exists x \mathop{\mathsf{was}}Fx$' be acceptable – that there is something which has the temporal property \emph{was $F$}? Or should we confine the temporal properties to tensed truth, i.e., it is only sentences which have the temporal properties of previously and subsequent truth.
 
-A huge literature has grown up on the topic of \define{conditional logics}, logics which add new connectives, distinct from `$\eif$', hoping to better represent the behaviour of conditionals in English. Perhaps the most celebrated are the logics associated with Lewis-Stalnaker conditionals. In Lewis' version, the counterfactual conditional (§\ref{s:IndicativeSubjunctive}) has a certain modal force: it tells you about how things \emph{would have been} under alternative possible circumstances. So the logic of conditionals he develops draws on the framework of modal logic, with some innovations of his own. The Stalnaker conditional is similar, but Stalnaker wants to claim that the indicative conditional too has modal force.\footnote{See David Lewis (1973) \emph{Counterfactuals}, Blackwell, and Robert C Stalnaker (1975) ‘Indicative conditionals’, \emph{Philosophia} \textbf{5}: 269–286, \url{https://doi.org/10.1007/bf02379021}.}
+A huge literature has grown up on the topic of \define{conditional logics}, logics which add new connectives, distinct from `$\eif$', hoping to better represent the behaviour of conditionals in English. Perhaps the most celebrated are the logics associated with Lewis-Stalnaker conditionals. In Lewis' version, the counterfactual conditional (§\ref{s:IndicativeSubjunctive}) has a certain modal force: it tells you about how things \emph{would have been} under alternative possible circumstances. So the logic of conditionals he develops draws on the framework of modal logic, with some innovations of his own. The Stalnaker conditional is similar, but Stalnaker wants to claim that the indicative conditional too has modal force.\footnote{See David Lewis (1973) \emph{Counterfactuals}, Blackwell, and Robert C Stalnaker (1975) ‘Indicative conditionals’, \emph{Philosophia} \textbf{5}: 269–286, \httpurl{doi.org/10.1007/bf02379021}.}
 
 Finally, another common extension of \FOL\ is to allow quantification over possible extensions (i.e., collections of individuals in the domain). This is \define{second-order logic}, the thought being that first-order logic quantifies over individuals, second-order logic quantifies over collections of individuals, third-order logic over collections of collections of individuals, and so on. This allows us to represent arguments like this: \begin{earg}
 	\item There is a property Bob has and Alice does not. $\exists X (Xb \eand \enot Xa)$
@@ -1130,7 +1130,7 @@ More recently, influential alternative logics have been explored which result fr
 
 One prominent alternative is \define{linear logic}, which result from restrictions to the rule of contraction. Linear logic is sometimes said to be \emph{resource conscious}; it matters, in linear logic, how many times you need to appeal to an assumption in order to construct a proof. Some claims which might be provable by appealing twice to an assumption, may fail to be provable if you were permitted only to appeal once to that assumption. So in the assumptions of a linear logic proof it is important to note how many times an assumption appears – contraction, which says that the same things can be proved even if you throw away duplicate assumptions, is not compatible with keeping track of resources in this way. Linear logic has found uses in computer science, in modelling the behaviour of algorithms – in an actual computation, it can be very important to be efficient in the calls you make on resources. If appealing to an assumption involves reading that assumption from disk, for example, then the fewer appeals to the assumption you can make, the faster your algorithm will run.
 
-Amongst philosophers, however, the most prominent substructural logic is \define{relevance logic} (US), aka \define{relevant logic} (UK/Australasia).\footnote{See Burgess, \emph{op. cit.}, Priest, \emph{op. cit.}, and Edwin Mares `Relevance Logic' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \url{https://plato.stanford.edu/entries/logic-relevance/}.} Relevant logicians argue that the so-called `paradoxes of material implication' (§\ref{s:ParadoxesOfMaterialConditional}) are symptoms of a broader failure of classical logic to require that the premises of a valid argument must be relevant to its conclusion. Relevant logicians are particularly incensed by the fact that $A \eand \enot A \proves B$; accordingly, they need to block the standard proof: \begin{proof}
+Amongst philosophers, however, the most prominent substructural logic is \define{relevance logic} (US), aka \define{relevant logic} (UK/Australasia).\footnote{See Burgess, \emph{op. cit.}, Priest, \emph{op. cit.}, and Edwin Mares `Relevance Logic' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/logic-relevance/}.} Relevant logicians argue that the so-called `paradoxes of material implication' (§\ref{s:ParadoxesOfMaterialConditional}) are symptoms of a broader failure of classical logic to require that the premises of a valid argument must be relevant to its conclusion. Relevant logicians are particularly incensed by the fact that $A \eand \enot A \proves B$; accordingly, they need to block the standard proof: \begin{proof}
 	\hypo{ana}{A \eand \enot A}
 	\open
 	\hypo{b}{\enot B}
@@ -1150,7 +1150,7 @@ Another use of many valued logics appeals to not just a third truth value, but i
 There are lots of places where you might wish to apply logic: anywhere that a persuasive case needs to be made, or clarity and precision of expression is vital. But some areas are more active than others. One is mathematics, as already mentioned; and issues of decidability and effective provability lead quickly into theoretical computer science. 
 
 But logic has possibly more suprising applications too: \begin{itemize}
-	\item  In \emph{law}, where ambiguity needs to be resolved and the job of an advocate is (though only partly) to persuade through rational argument.\footnote{Henry Prakken and Giovanni Sartor (2015) ‘Law and Logic: a Review from an Argumentation Perspective’, \emph{Artificial Intelligence} \textbf{227}: 214–45, \url{https://doi.org/10.1016/j.artint.2015.06.005}.} The skills of logical analysis are important in deciding whether legal argument is conclusive. Certainly the judge needs logic to see through sophistry and rhetoric. 
+	\item  In \emph{law}, where ambiguity needs to be resolved and the job of an advocate is (though only partly) to persuade through rational argument.\footnote{Henry Prakken and Giovanni Sartor (2015) ‘Law and Logic: a Review from an Argumentation Perspective’, \emph{Artificial Intelligence} \textbf{227}: 214–45, \httpurl{doi.org/10.1016/j.artint.2015.06.005}.} The skills of logical analysis are important in deciding whether legal argument is conclusive. Certainly the judge needs logic to see through sophistry and rhetoric. 
 \item  In \emph{linguistics}, where methods from logic are foundational to formal theories of meaning.\footnote{See Paul Portner (2005) \emph{What is Meaning?}, Blackwell.} Many formal semantic theories invoke a level of sub-surface grammatical structure which is the input to semantic analysis, often called \define{logical form}. The properties and nature of this postulated logical form are heavily endebted to the kinds of logical resources available to the theorist. We saw a prominent example of different logical frameworks being brought to bear on a hypothesis about the `real' meaning of a natural language expression in our brief discussion of the analysis of definite descriptions in §\ref{subsec.defdesc}. 
 \item  In \emph{management consulting} and related fields, the topic‐neutrality of logic and the habits of rigorous thought it encourages are very useful for people who have to offer recommendations about complex areas without necessarily having much subject-specific knowledge.
 \end{itemize}
@@ -1172,7 +1172,7 @@ If `red' is tolerant, then any two adjacent slivers will be either both red, or 
      $$\forall x \forall y ((Rx \eand Axy) \eif Ry).$$
 This is an instance of the principle of Tolerance, because adjacent slivers are extremely similar. Let the slivers of colour be denoted `$a_{1},…,a_{1000}$', with `$a_{1}$' the leftmost sliver. Then the above tolerance principle, together with, `$Ra_{1}$', and many premises of the form `$Aa_{i}a_{i+1}$' will entail `$\forall x Rx$', given that there is a case of red, and we have enough adjacent cases: as we do in the spectrum.  The formal proof is long, but basically: if there is a case of red, and a case of non-red, then Tolerance tells us they cannot be linked by a sequence of adjacent cases. But in the spectrum any two slivers can be linked by a sequence of adjacent cases. 
 
-There are a number of responses, some of which we've mentioned already. The degree-theory solution says that each adjacent sliver to the right is red to a slightly less degree than the sliver to the left, and that it is true to a lower degree that it is red. Such views abandon tolerance for vague predicates in favour of a principle of `closeness': that extremely similar things are both $F$ to an extremely similar degree.\footnote{See N J J Smith (2008) \emph{Vagueness and Degrees of Truth}, Oxford University Press.} There are also solutions that appeal to truth-value `gaps', resembling many-valued logics in some ways – most prominent among these is the approach known as \define{supervaluationism}.\footnote{See Kit Fine (1975) `Vagueness, truth and logic', \emph{Synthese} \textbf{54}: 235–59, \url{https://doi.org/10.1007/bf00485047}.} Finally, there is a purely classical logic solution, Williamson's theory of \define{epistemicism}, which says that there are sharp cutoffs (so that the tolerance premise is false), but explains the appearance that there are no sharp cutoffs as a byproduct of our essential inability to know where the sharp boundaries lie. Logic won't decide between these approaches. But it does help us in formulating them precisely and in enabling us to classify their strengths and weaknesses precisely. This is an advantage in most areas of controversy and debate.
+There are a number of responses, some of which we've mentioned already. The degree-theory solution says that each adjacent sliver to the right is red to a slightly less degree than the sliver to the left, and that it is true to a lower degree that it is red. Such views abandon tolerance for vague predicates in favour of a principle of `closeness': that extremely similar things are both $F$ to an extremely similar degree.\footnote{See N J J Smith (2008) \emph{Vagueness and Degrees of Truth}, Oxford University Press.} There are also solutions that appeal to truth-value `gaps', resembling many-valued logics in some ways – most prominent among these is the approach known as \define{supervaluationism}.\footnote{See Kit Fine (1975) `Vagueness, truth and logic', \emph{Synthese} \textbf{54}: 235–59, \httpurl{doi.org/10.1007/bf00485047}.} Finally, there is a purely classical logic solution, Williamson's theory of \define{epistemicism}, which says that there are sharp cutoffs (so that the tolerance premise is false), but explains the appearance that there are no sharp cutoffs as a byproduct of our essential inability to know where the sharp boundaries lie. Logic won't decide between these approaches. But it does help us in formulating them precisely and in enabling us to classify their strengths and weaknesses precisely. This is an advantage in most areas of controversy and debate.
 
 
 \keyideas{
