--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -33,7 +33,7 @@ This book is a derivative work created by Antony Eagle, based upon Tim Button's 
 
 You can find the most up to date version of \forallxadl\ at \httpurl{github.com/antonyeagle/forallx-adl}. 
 
-The current version of \forallx\ Cambridge is available at \httpurl{github.com/OpenLogicProject/forallx-cam}}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \httpurl{fecundity.com/logic}. 
+The current version of \forallx\ Cambridge is available at \httpurl{github.com/OpenLogicProject/forallx-cam}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \httpurl{fecundity.com/logic}. 
 
 This book, like its predecessors, is released under a Creative Commons license (Attribution 4.0).\medskip 
 
