--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -424,12 +424,12 @@ In §\ref{s:valuations}, we introduced the idea of a valuation and showed how to
 In §\ref{s:BasicNotions}, I explained \emph{necessary truth} and \emph{necessary falsity}. Both notions have close but imperfect surrogates in \TFL. We shall start with a surrogate for necessary truth.
 	\factoidbox{
 		$\meta{A}$ is a \define{logical truth} iff it is true on every valuation (among those valuations on which it has a truth value).}
-We need the parenthetical clause because of the way we have defined valuations. A given valuation $v$ might only assign truth values to some atomic sentences and not all. For any sentence $\meta{A}$ which contains an atomic sentence to which $v$ doesn't assign a truth value, $\meta{A}$ will not have any truth value according to $v$. Logical truths in \TFL\ are sometimes called \define{tautologies}.
+We need the parenthetical clause because of the way we have defined valuations. A given valuation might only assign truth values to some atomic sentences and not all. For any sentence $\meta{A}$ which contains an atomic sentence to which a valuation doesn't assign a truth value, $\meta{A}$ will not have any truth value according to that valuation. Logical truths in \TFL\ are sometimes called \define{tautologies}.
 
 We can determine whether a sentence is a logical truth just by using truth tables. If the sentence is true on every row of a complete truth table, then it is true on every valuation for its constituent atomic sentences, so it is a logical truth. In the example of §\ref{s:CompleteTruthTables}, `$(H \eand I) \eif H$' is a logical truth. 
 
 
-This is only, though, a surrogate for necessary truth. There are some necessary truths that we cannot adequately symbolise in \TFL. An example is `$2 + 2 = 4$'. This \emph{must} be true, but if we try to symbolise it in \TFL, the best we can offer is an atomic sentence, and no atomic sentence is a logical truth.\footnote{At this risk of repeating myself: $2+2=4$ is necessarily true, but it is not necessarily true \emph{in virtue of its structure}. A necessary truth is true, \emph{with its actual meaning}, in every possible situation. A \TFL-logical truth is true \emph{in the actual situation} on every possible way of interpreting its atomic sentences. These are interestingly different notions.} Still, if we can adequately symbolise some English sentence using a \TFL\ sentence which is a logical truth, then that English sentence expresses a necessary truth.
+This is only, though, a surrogate for necessary truth. There are some necessary truths that we cannot adequately symbolise in \TFL. An example is `$2 + 2 = 4$'. This \emph{must} be true, but if we try to symbolise it in \TFL, the best we can offer is an atomic sentence, and no atomic sentence is a logical truth.\footnote{At the risk of repeating myself: $2+2=4$ is necessarily true, but it is not necessarily true \emph{in virtue of its structure}. A necessary truth is true, \emph{with its actual meaning}, in every possible situation. A \TFL-logical truth is true \emph{in the actual situation} on every possible way of interpreting its atomic sentences. These are interestingly different notions.} Still, if we can adequately symbolise some English sentence using a \TFL\ sentence which is a logical truth, then that English sentence expresses a necessary truth.
 
 We have a similar surrogate for necessary falsity:
 	\factoidbox{
@@ -1096,7 +1096,7 @@ We just saw how to use partial truth tables to directly construct a valuation wh
 
 But it turns out we can use the method of partial truth tables in an indirect way to also evaluate arguments for validity or sentences for inconsistency. The idea is this: we attempt to construct a partial truth table showing that the argument is invalid, and \emph{if we fail}, we can conclude that the argument is in fact valid.
 
-So consider showing that an argument is invalid, which we just saw requires only a one-line partial truth table on which all of the premises are true and the conclusion is false. So consider an attempt to show this argument invalid: $(P\eand R), (Q \eiff P) \ttherefore Q$. We construct a partial truth table, and attempt to construct a valuation which makes all the premises true and the conclusion false:  
+Consider showing that an argument is invalid, which we just saw requires only a one-line partial truth table on which all of the premises are true and the conclusion is false. Suppose we attempt to show this argument invalid: $(P\eand R), (Q \eiff P) \ttherefore Q$. We construct a partial truth table, and attempt to construct a valuation which makes all the premises true and the conclusion false:  
 \begin{center}
 \begin{tabular}{c c c |d e f d e f d} \toprule 
 $P$ & $Q$ & $R$ & $(P$ & $\eand$ & $R)$ & $(Q$ & $\eiff$ & $P)$ & $Q$\\
